# ChromoSim

./: .gitattributes  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml
chromosim/models/: ev_column_ode_multi.py  params_ev_aex.py  params_ev_aex_single.py
chromosim/numerics/: build_matrices.py  sparsity.py
chromosim/profiles/: salt_and_feed.py
chromosim/util/: unpack.py
docs/: index.md
docs/faq/: faq.md
scripts/: main_ev_aex.py
