[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ChromoSim"
version = "0.1.0"
description = "Mechanistic chromatography simulator (convection–dispersion + competitive Langmuir)."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Your Name", email = "you@example.com"}]
dependencies = ["numpy","scipy","matplotlib","pydantic>=2"]

[project.scripts]
chromosim-run = "scripts.main_ev_aex:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["chromosim*"]
